--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -14,3 +14,18 @@
     padding-bottom: 6rem;
   }
 }
+
+.carousel-item:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.carousel-caption {
+  z-index: 2;
+}
