--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -2023,7 +2023,7 @@ header .form-inline .search-form.close {
   color: #343a40;
   font-size: 14px;
   font-weight: 600;
-  text-transform: capitalize;
+  text-transform: none;
   vertical-align: middle;
 }
 
