--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -36,12 +36,12 @@
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: 5.4rem;
+    padding-top: 110px;
     padding-bottom: 6rem;
   }
 }
 
-.carousel-item:after {
+/* .carousel-item:after {
   content: "";
   display: block;
   position: absolute;
@@ -69,7 +69,7 @@
 .carousel-caption>p {
   line-height: 150%;
   font-size: 22px;
-}
+} */
 
 .text-justify {
   text-align: justify;
